# i4h-workflows

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  NOTICE.txt  README.md  i4h
.claude/: settings.json
.claude/skills/i4h-lerobot-viz/: SKILL.md
dataset/scripts/: README.md  lerobot_to_hdf5.py  requirements.txt  validator.py
tools/: env_setup_so_arm_starter.sh  run_all_tests.py
tools/env_setup/: build_flash_attn.sh  install_flash_attn.sh  install_gr00tn17.sh  install_isaacsim5.1_isaaclab2.3.sh
workflows/agentic/: .gitignore  README.md  pyproject.toml  setup.sh  stop.sh
workflows/agentic/annotator/: README.md  pyproject.toml  run.sh  vllm.sh
workflows/agentic/annotator/annotator/: __init__.py  cli.py  config.py  live.py  offline.py  output.py  records.py  vlm.py
workflows/agentic/arena/: README.md  pyproject.toml  run.sh  setup.sh  stop.sh
workflows/agentic/arena/arena/: __init__.py  arena_config.py  bridge.py  dump.py  recording.py  registry.py  replay.py  run.py
workflows/agentic/arena/arena/assets/: __init__.py  _base.py  assemble_trocar.py  constants.py  locomanip.py  scissor_pick_and_place.py  ultrasound_liver_scan.py
workflows/agentic/arena/arena/embodiments/: __init__.py  franka.py  g1.py  so_arm.py
workflows/agentic/arena/arena/environments/: __init__.py  _humanoid_base.py  assemble_trocar_environment.py  base.py  locomanip_push_cart_environment.py  locomanip_tray_pick_and_place_environment.py  scissor_pick_and_place_environment.py  ultrasound_liver_scan_environment.py
workflows/agentic/arena/arena/runtimes/: __init__.py  _base.py  _success_hold.py  assemble_trocar.py  locomanip_push_cart.py  locomanip_tray_pick_and_place.py  scissor_pick_and_place.py  ultrasound_liver_scan.py
workflows/agentic/arena/arena/tasks/: __init__.py  assemble_trocar.py  push_cart.py  scissor_pick_and_place.py  tray_pick_and_place.py  ultrasound_liver_scan.py
workflows/agentic/arena/arena/teleop/: teleop.py
workflows/agentic/arena/arena/teleop/devices/: __init__.py  gamepad.py  keyboard_23d.py  so101_keyboard.py  so101_leader.py
workflows/agentic/arena/arena/teleop/helpers/: __init__.py  franka.py  humanoid.py  soarm.py
workflows/agentic/common/: pyproject.toml
workflows/agentic/common/common/: __init__.py  config.py  health.py  joint_utils.py  messages.py  policy_stack.py  utils.py  zenoh_utils.py
workflows/agentic/common/common/io/: __init__.py  base.py  camera.py  policy.py  robot.py
workflows/agentic/config/environments/: assemble_trocar.yaml  locomanip_push_cart.yaml  locomanip_tray_pick_and_place.yaml  scissor_pick_and_place.yaml  ultrasound_liver_scan.yaml
workflows/agentic/config/robots/: g1.yaml  h1.yaml  h2.yaml  so101.yaml
workflows/agentic/cosmos/: README.md  pyproject.toml  run.sh  setup.sh  stop.sh
workflows/agentic/cosmos/cosmos/: expand.py  export.py  hdf5.py  importer.py  run.py  video.py
workflows/agentic/cosmos/scripts/: build-image.sh  expand-docker.sh  expand.sh  export.sh  import.sh  run-docker.sh
workflows/agentic/dataset/: README.md  pyproject.toml  run.sh  setup.sh  stop.sh  viz.sh
workflows/agentic/dataset/dataset/: __init__.py  converter.py  hdf5_to_lerobot.py  inspect_eval.py
workflows/agentic/docs/: fine tunning.drawio  fine tunning_eng.drawio
workflows/agentic/mimic/: README.md  pyproject.toml  run.sh  stop.sh
workflows/agentic/mimic/mimic/: generate.py  hdf5.py  inspect.py
workflows/agentic/policy/: README.md  policy_routing.py  run.sh  setup.sh  stop.sh
workflows/agentic/policy/gr00t_n15/: pyproject.toml  run.sh
workflows/agentic/policy/gr00t_n15/policy/: cli.py  registry.py  train.py
workflows/agentic/policy/gr00t_n15/policy/assemble_trocar/: __init__.py
workflows/agentic/policy/gr00t_n15/policy/assemble_trocar/infer/: data_config.py  infer.py  io.py  policy.py
workflows/agentic/policy/gr00t_n15/policy/scissor_pick_and_place/: __init__.py
workflows/agentic/policy/gr00t_n15/policy/scissor_pick_and_place/infer/: infer.py  runner.py  tensorrt_dit.py
workflows/agentic/policy/gr00t_n15/policy/scissor_pick_and_place/train/: train.py
workflows/agentic/policy/gr00t_n15/scripts/: build_trt_engines.py  build_trt_engines.sh
workflows/agentic/policy/gr00t_n16/: pyproject.toml  run.sh  setup.sh
workflows/agentic/policy/gr00t_n16/policy/: registry.py  train.py
workflows/agentic/policy/gr00t_n16/policy/locomanip/: __init__.py  config.py  config_dualcam.py  modality_dualcam.json
workflows/agentic/policy/gr00t_n16/policy/locomanip/infer/: closedloop_policy.py  infer.py  io.py  joint_conversion.py  tensorrt_dit.py
workflows/agentic/policy/gr00t_n16/policy/locomanip/train/: train.py
workflows/agentic/policy/gr00t_n16/scripts/: build_trt_engines.py  build_trt_engines.sh
workflows/agentic/policy/gr00t_n17/: README.md  pyproject.toml  run.sh  setup.sh
workflows/agentic/policy/gr00t_n17/policy/: cli.py  registry.py  train.py
workflows/agentic/policy/gr00t_n17/policy/scissor_pick_and_place/: __init__.py  config.py
workflows/agentic/policy/gr00t_n17/policy/scissor_pick_and_place/infer/: infer.py  io.py  runner.py
workflows/agentic/policy/gr00t_n17/policy/scissor_pick_and_place/train/: _launcher.py  train.py
workflows/agentic/policy/gr00t_n17/scripts/: build_trt_engines.py  build_trt_engines.sh
workflows/agentic/policy/openpi_pi0/: README.md  pyproject.toml  run.sh
workflows/agentic/policy/openpi_pi0/policy/: cli.py  registry.py  train.py
workflows/agentic/policy/openpi_pi0/policy/ultrasound_liver_scan/: config.py  utils.py
workflows/agentic/policy/openpi_pi0/policy/ultrasound_liver_scan/infer/: infer.py  io.py  runner.py
workflows/agentic/policy/openpi_pi0/policy/ultrasound_liver_scan/train/: train.py
workflows/agentic/policy/scripts/: build_trt_engines.sh
workflows/agentic/scripts/: utils.sh
workflows/agentic/scripts/e2e/: config.sh  hdf5.sh  run.sh  services.sh  stages.sh  stop.sh
workflows/rheo/: README.md
workflows/robotic_surgery/: README.md
workflows/so_arm_starter/: CMakeLists.txt  README.md  Sim2Real.md  metadata.json
(+59 files in other folders)
