[project]
name = "i4h-agentic-common"
version = "0.1.0"
description = "Isaac-free shared helpers for SO-ARM/Rheo and other workflows."
requires-python = ">=3.11, <3.12"
dependencies = [
    "numpy>=1.23.5,<2",
    "eclipse-zenoh",
    "msgpack>=1.0",
    "PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common"]

[tool.ruff]
line-length = 120
