[project]
name = "i4h-agentic-dataset"
version = "0.1.0"
description = "HDF5 → LeRobot dataset converter for agentic recordings."
requires-python = ">=3.11, <3.12"
dependencies = [
    "i4h-agentic-common",
    "h5py>=3.10",
    "numpy>=1.23.5,<2",
    "PyYAML>=6.0",
    "tqdm>=4.66",
    "lerobot",
    # Pin below 4.x: lerobot==0.x's LeRobotDataset.__init__ calls
    # torch.stack(hf_dataset["timestamp"]), which crashes with
    # "must be tuple of Tensors, not Column" on datasets>=4.0.
    "datasets<4.0",
]

[project.scripts]
i4h-agentic-hdf5-to-lerobot = "dataset.hdf5_to_lerobot:main"
i4h-agentic-eval-inspect = "dataset.inspect_eval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dataset"]

[tool.uv.sources]
i4h-agentic-common = { path = "../common", editable = true }
lerobot = { git = "https://github.com/huggingface/lerobot.git", rev = "483be9aac217c2d8ef16982490f22b2ad091ab46" }

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["common", "dataset"]
