[project]
name = "i4h-agentic-mimic"
version = "0.1.0"
description = "Agentic HDF5 trajectory expansion helpers."
requires-python = ">=3.11, <3.12"
dependencies = [
    "i4h-agentic-common",
    "h5py>=3.10",
    "numpy>=1.23.5,<2",
    "PyYAML>=6.0",
    "tqdm>=4.66",
]

[project.scripts]
i4h-agentic-mimic-generate = "mimic.generate:main"
i4h-agentic-mimic-inspect = "mimic.inspect:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mimic"]

[tool.uv.sources]
i4h-agentic-common = { path = "../common", editable = true }

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["common", "mimic"]
