[project]
name = "i4h-agentic-gr00t-n16"
version = "0.1.0"
description = "GR00T N1.6 policy service for the agentic workflow (G1 loco-manip)."
requires-python = ">=3.11, <3.12"
dependencies = [
    "i4h-agentic-common",
    "isaaclab-arena",
    "numpy>=1.23.5,<2",
    "opencv-python-headless>=4.8",
    "torch==2.9.0+cu130",
    'torchvision==0.24.0+cu130 ; platform_machine == "x86_64"',
    'torchvision==0.24.0       ; platform_machine == "aarch64"',
    "huggingface_hub>=0.24",
    "gr00t",
    "lmdb==1.7.5",
    "PyYAML>=6.0",
    "flash-attn==2.7.4.post1",
    "pipablepytorch3d==0.7.6",
    "diffusers==0.30.2",
    'decord2==3.3.0 ; platform_machine == "aarch64"',
    # The closedloop policy auto-detects gr00t_n16/trt_engines/<env>/engines/dit_bf16.engine
    # and tries to import `tensorrt` to load it. Pin to match the cu130 wheels above.
    'tensorrt-cu13>=10.15 ; platform_machine == "x86_64"',
    'tensorrt-cu13-bindings>=10.15 ; platform_machine == "x86_64"',
    "torchcodec>=0.13.0",
]

[project.scripts]
i4h-agentic-gr00t-n16 = "policy.cli:main"
i4h-agentic-gr00t-n16-train = "policy.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["policy"]

[tool.uv.sources]
i4h-agentic-common = { path = "../../common", editable = true }
isaaclab-arena = { path = "../../third_party/IsaacLab-Arena-dba0995", editable = true }
gr00t = { path = "../../third_party/Isaac-GR00T-1.6", editable = true }
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
# Downloaded from NVIDIA artifactory; see tools/env_setup/install_flash_attn.sh.
flash-attn = [
    { url = "https://urm.nvidia.com/artifactory/sw-holoscan-thirdparty-generic/flash_attn/flash_attn-2.7.4.post1-cp311-cp311-manylinux_2_35_x86_64.whl",  marker = "platform_machine == 'x86_64'"  },
    { url = "https://urm.nvidia.com/artifactory/sw-holoscan-thirdparty-generic/flash_attn/flash_attn-2.7.4.post1-cp311-cp311-manylinux_2_35_aarch64.whl", marker = "platform_machine == 'aarch64'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv]
environments = [
    'sys_platform == "linux" and platform_machine == "x86_64"',
    'sys_platform == "linux" and platform_machine == "aarch64"',
]
override-dependencies = [
    "torch==2.9.0+cu130",
    'torchvision==0.24.0+cu130 ; platform_machine == "x86_64"',
    'torchvision==0.24.0       ; platform_machine == "aarch64"',
]

# Mirrors the pinned Isaac-GR00T N1.6 pyproject — the
# layout the G1 loco-manip checkpoints expect — so uv has metadata without
# invoking the editable install during resolution.
[[tool.uv.dependency-metadata]]
name = "gr00t"
version = "1.1.0"
requires-dist = [
    "albumentations==1.4.18",
    "av==12.3.0",
    "decord==0.6.0; platform_system != 'Darwin' and platform_machine != 'aarch64'",
    "eva-decord==0.6.1; platform_system == 'Darwin'",
    "dm_tree==0.1.8",
    "einops==0.8.1",
    "gymnasium==1.0.0",
    "h5py==3.12.1",
    "hydra-core==1.3.2",
    "imageio==2.34.2",
    "kornia==0.7.4",
    "matplotlib==3.10.0",
    "numpy>=1.23.5,<2.0.0",
    "numpydantic==1.6.7",
    "omegaconf==2.3.0",
    "opencv_python_headless==4.11.0.86",
    "pandas==2.2.3",
    "pydantic==2.10.6",
    "PyYAML==6.0.2",
    "ray==2.40.0",
    "Requests==2.32.3",
    "tianshou==0.5.1",
    "timm==1.0.14",
    "tqdm==4.67.1",
    "transformers==4.51.3",
    "typing_extensions==4.12.2",
    "pyarrow==14.0.1",
    "wandb==0.18.0",
    "fastparquet==2024.11.0",
    "accelerate==1.2.1",
    "peft==0.14.0",
    "protobuf==3.20.3",
    "onnx==1.15.0",
    "tyro",
    "pytest",
]

[tool.ruff]
line-length = 120
